AC_INIT([ssh_cache], [0.0.1], [gbr@voidland.org])
AM_INIT_AUTOMAKE(foreign)
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_MACRO_DIR([config])

AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_C_O
LT_INIT
AC_SUBST([LIBTOOL_DEPS])

VOID_BOOST([thread system program_options])

if test "x${BOOST}" != "xyes"
then
    AC_MSG_ERROR([boost is required])
fi
if test `expr ${BOOST_MAJOR_VERSION} \* 1000 + ${BOOST_MINOR_VERSION}` -lt 1035
then
    AC_MSG_ERROR([boost version 1.35.0 or later is required])    # asio
fi
if test "x${HAVE_LIBboost_thread}" != "xyes"
then
    AC_MSG_ERROR([boost_thread is required])
fi
if test "x${HAVE_LIBboost_system}" != "xyes"
then
    AC_MSG_ERROR([boost_system is required])
fi
if test "x${HAVE_LIBboost_program_options}" != "xyes"
then
    AC_MSG_ERROR([boost_program_options is required])
fi

SSH_CACHE_LDFLAGS=""
_AI_LIST_APPEND_WO_DUPLICATES([${SSH_CACHE_LDFLAGS}], [${BOOST_LDFLAGS}], SSH_CACHE_LDFLAGS)

SSH_CACHE_CPPFLAGS=""
_AI_LIST_APPEND_WO_DUPLICATES([${SSH_CACHE_CPPFLAGS}], [${BOOST_CPPFLAGS}], SSH_CACHE_CPPFLAGS)

SSH_CACHE_CXXFLAGS=""
_AI_LIST_APPEND_WO_DUPLICATES([${SSH_CACHE_CXXFLAGS}], [${BOOST_THREAD_CXXFLAGS}], SSH_CACHE_CXXFLAGS)
_AI_LIST_APPEND_WO_DUPLICATES([${SSH_CACHE_CXXFLAGS}], [${BOOST_SYSTEM_CXXFLAGS}], SSH_CACHE_CXXFLAGS)
_AI_LIST_APPEND_WO_DUPLICATES([${SSH_CACHE_CXXFLAGS}], [${BOOST_PROGRAM_OPTIONS_CXXFLAGS}], SSH_CACHE_CXXFLAGS)

SSH_CACHE_LIBS=""
_AI_LIST_PREPEND_WO_DUPLICATES([${SSH_CACHE_LIBS}], [${BOOST_THREAD_LIBS}], SSH_CACHE_LIBS)
_AI_LIST_PREPEND_WO_DUPLICATES([${SSH_CACHE_LIBS}], [${BOOST_SYSTEM_LIBS}], SSH_CACHE_LIBS)
_AI_LIST_PREPEND_WO_DUPLICATES([${SSH_CACHE_LIBS}], [${BOOST_PROGRAM_OPTIONS_LIBS}], SSH_CACHE_LIBS)

AC_SUBST([SSH_CACHE_LDFLAGS])
AC_SUBST([SSH_CACHE_CPPFLAGS])
AC_SUBST([SSH_CACHE_CXXFLAGS])
AC_SUBST([SSH_CACHE_LIBS])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
